--- a/playbook.yml
+++ b/playbook.yml
@@ -1,3 +1,3 @@
-Masthan,
+Romil,
 
-Initially, we suspected that this issue was caused by the forceful termination of PIDs. However, upon further investigation, we have determined that the issue occurs during startup.
+We have identified the root cause of the issue mentioned below and have submitted the necessary ARM ticket to gain access to the missing AD OU groups. Completing the full request will take a couple of hours.
