--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,13 @@
 import timeit
 import time
-import math
+import numpy as np
 
 def long_running_task():
-    for i in range(10000):
-        math.factorial(1000)
+    size = 500
+    matrix_a = np.random.rand(size, size)
+    matrix_b = np.random.rand(size, size)
+    for _ in range(100):
+        np.dot(matrix_a, matrix_b)
 
 # Start the timer
 start_time = time.time()
