--- a/playbook.yml
+++ b/playbook.yml
@@ -1,22 +1,1 @@
-#!/bin/bash
-
-DNS_NAME="www.example.com"
-CA_BUNDLE="/path/to/your/ca-bundle.crt"  # Replace with your CA bundle path if needed
-
-# Get all IP addresses associated with the DNS name
-IP_ADDRESSES=$(dig +short $DNS_NAME)
-
-if [ -z "$IP_ADDRESSES" ]; then
-    echo "No IP addresses found for $DNS_NAME"
-    exit 1
-fi
-
-for IP in $IP_ADDRESSES; do
-    echo "Checking $DNS_NAME ($IP)"
-    if curl --cacert "$CA_BUNDLE" --resolve "$DNS_NAME:443:$IP" --head "https://$DNS_NAME"; then
-        echo "$DNS_NAME ($IP): Certificate is valid."
-    else
-        echo "$DNS_NAME ($IP): Certificate verification failed."
-    fi
-    echo ""
-done
+echo | openssl s_client -connect gcp-kas.bankofamerica.com:443 -servername gcp-kas.bankofamerica.com | openssl x509 -noout -text
