--- a/playbook.yml
+++ b/playbook.yml
@@ -1,1 +1,10 @@
- am writing to bring to your attention an issue we have identified with our current load balancer configuration. It appears that the Fully Qualified Domain Name (FDNS) URL we are using is pointing to an active IP address that is allocated to two different URLs. This misconfiguration is causing intermittent SSL certificate verification failures for our services.
+
+Certainly! Here is a rephrased version of your email:
+
+Subject: Urgent: Load Balancer Configuration Issue Causing SSL Verification Failures
+
+Hi Team,
+
+We have identified an issue with our current load balancer configuration. The active IP address associated with our FDNS gcp-kas.bankofamerica.com is allocated to two different URLs, one of which does not belong to our AIT. This misconfiguration is causing intermittent SSL certificate verification failures for our services.
+
+Could you please investigate why a single IP address is being assigned to two different hosts?
