--- a/playbook.yml
+++ b/playbook.yml
@@ -1,53 +1,3 @@
-#!/bin/bash
+After reviewing the current situation, it seems that no similar issues have been reported following the cleanup of the database sessions. However, the presence of over 120 inactive sessions during this time raises some concerns. Despite the connection pool being set to 1048*, we're still experiencing delays, suggesting an underlying issue beyond just the session cleanup.
 
-# Define the base paths
-LOCAL_BASE_PATH="/gcp/dev1/apps/"
-REMOTE_HOST="user@remote_host"
-REMOTE_BASE_PATH="/gcp/dev1/apps/"
-
-# Output file
-DIFF_FILE="diff.txt"
-> $DIFF_FILE  # Clear the diff file
-
-# Function to gather repository names
-gather_repos() {
-    local BASE_PATH=$1
-    ssh $REMOTE_HOST "find $BASE_PATH -maxdepth 1 -mindepth 1 -type d -exec basename {} \;" | sort
-}
-
-# Function to gather version names
-gather_versions() {
-    local REPO_PATH=$1
-    ssh $REMOTE_HOST "find $REPO_PATH -maxdepth 1 -mindepth 1 -type d -exec basename {} \;" | sort
-}
-
-# Step 1: Compare Repositories
-LOCAL_REPOS=$(find $LOCAL_BASE_PATH -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | sort)
-REMOTE_REPOS=$(gather_repos $REMOTE_BASE_PATH)
-
-# Iterate over each repository
-for REPO in $LOCAL_REPOS; do
-    if echo "$REMOTE_REPOS" | grep -q "^$REPO$"; then
-        # Step 2: Compare Versions
-        LOCAL_VERSIONS=$(find "$LOCAL_BASE_PATH/$REPO" -maxdepth 1 -mindepth 1 -type d -exec basename {} \; | sort)
-        REMOTE_VERSIONS=$(gather_versions "$REMOTE_BASE_PATH/$REPO")
-
-        for VERSION in $LOCAL_VERSIONS; do
-            if echo "$REMOTE_VERSIONS" | grep -q "^$VERSION$"; then
-                # Step 3: Check venv existence
-                LOCAL_VENV_PATH="$LOCAL_BASE_PATH/$REPO/$VERSION/venv"
-                REMOTE_VENV_PATH="$REMOTE_BASE_PATH/$REPO/$VERSION/venv"
-
-                if [ -d "$LOCAL_VENV_PATH" ] && ! ssh $REMOTE_HOST "[ -d $REMOTE_VENV_PATH ]"; then
-                    echo "venv is MISSING in $REMOTE_VENV_PATH on remote host" | tee -a $DIFF_FILE
-                fi
-            else
-                echo "Version $VERSION in repository $REPO is MISSING on remote host" | tee -a $DIFF_FILE
-            fi
-        done
-    else
-        echo "Repository $REPO is MISSING on remote host" | tee -a $DIFF_FILE
-    fi
-done
-
-echo -e "\nCheck completed. Differences recorded in $DIFF_FILE"
+It's important to note that the database will continue to accept connections as long as the total number of active sessions does not exceed the maximum allowed connections in the pool, which is 1048. In this case, with 128 inactive sessions, these sessions are not actively using resources but still occupy slots in the connection pool. This leaves 920 available slots for new connections, meaning the database should continue to accept new connections until all 1048 slots are occupied, whether they are active or inactive
